<resources>
    <string name="app_name">Kupci EPS-a</string>
    <string name="company_name">Електропривреда Србије</string>
    <string name="company_abbr">ЕПС</string>
    <string name="login">Кориснички налог</string>
    <string name="password">Лозинка</string>
    <string name="loginAction">Пријава</string>
    <string name="registerAction">Регистрација</string>
    <string name="account_insight">Увид у рачун</string>
    <string name="account_registration">Регистрација налога</string>
    <string name="registration">Регистрација</string>
    <string name="meter_number">Број бројила</string>
    <string name="ED_number">ЕД Број</string>
    <string name="person">Физичко Лице</string>
    <string name="person_name">Име и презиме</string>
    <string name="social_security">ЈМБГ</string>
    <string name="wire_number">Наплатни број</string>
    <string name="address">Адреса</string>
    <string name="street_number_text">Улица и број</string>
    <string name="county_city_text">Општина, Град</string>
    <string name="enterprise">Правно Лице</string>
    <string name="enterprise_name">Назив фирме</string>
    <string name="enterprise_full_name">Пун назив фирме</string>
    <string name="enterprise_social_security">Матични број</string>
    <string name="new_account">Нови Налог</string>
    <string name="newAccountAction">Направи</string>
    <string name="logo">ЕПС Лого</string>
    <string name="street_number">%1$s %2$s</string>
    <string name="county_city">%1$s, %2$s</string>
    <string name="create_account_message">Да ли сте сигурни да желите да направите налог са следећим информацијама?\n
        \t Кориснички налог: %1$s\n
        \t Лозинка: %2$s</string>
    <string name="accept">Прихвати</string>
    <string name="cancel">Поништи</string>
    <string name="invalid_user_message">Корисник са налогом: %1$s не постоји.</string>
    <string name="wrong_password_message">Погрешна лозинка.</string>
    <string name="buyer_invalid_message">Не постоји купац са унетом комбинацијом ЕД броја и броја бројила.</string>
    <string name="not_empty_message">Поље не сме остати празно.</string>
    <string name="account_exists">Налог са корисничким именом: %1$s већ постоји.</string>
    <string name="buyer_has_account">Купац %1$s већ има налог.</string>
    <string name="consumers">Потрошачи</string>
    <string name="consumer_category">Категорија потрошње</string>
    <string name="power_approved">Одобрена снага</string>
    <string name="power_supply_type">Врста снабдевања</string>
    <string name="tabbed_argument">\t %1$s</string>
    <string name="consumer_bills">Рачуни потрошача \n\t%1$s</string>
    <string name="bill_graph">Граф рачуна</string>
    <string name="last_12_months">Последњних 12 месеци</string>
    <string name="billing_period">Обрачунски период</string>
    <string name="number_of_days">Број дана</string>
    <string name="publishing_date">Датум издавања</string>
    <string name="publishing_place">Место издавања</string>
    <string name="traffic_excise_date">Датум промета и акцизе</string>
    <string name="reference_number">Позив на број</string>
    <string name="previous_current_tariff">Претходна и нова тарифа</string>
    <string name="power_consumption">Потрошња струје у kWh</string>
    <string name="tariff_consumption">Потрошња струје \n по тарифама</string>
    <string name="low_tariff">Нижа тарифа \nНТ (kWh)</string>
    <string name="high_tariff">Виша тарифа \nВТ (kWh)</string>
    <string name="meter_state">Стање на бројилу</string>
    <string name="billing_period_new_line">Обрачунски \nпериод</string>
    <string name="previous">Претходно</string>
    <string name="new_period">Ново</string>
    <string name="consumption">Утрошак</string>
    <string name="zone_consumption">Утрошак по зонама</string>
    <string name="zones">Зоне</string>
    <string name="zone">Зона</string>
    <string name="price">Цена</string>
    <string name="priceRSD">Укупна цена \n(RSD)</string>
    <string name="price_per_unit">Јединична \nцена (RSD)</string>
    <string name="low_tariff_abbr">НТ \n(kWh)</string>
    <string name="high_tariff_abbr">ВТ \n(kWh)</string>
    <string name="logout">Одјава</string>
    <string name="buyer">Купац</string>
    <string name="navigation">Навигација</string>
    <string name="bills">Рачуни</string>
    <string name="dinars">%1$s РСД</string>
    <string name="loading_pdf">Учитавање рачуна у ПДФ формату.</string>

</resources>
