<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <ImageView
        android:contentDescription="@string/logo"
        android:id="@+id/imageViewCompanyLogoInfo"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:src="@drawable/logo"/>

    <TextView
        android:id="@+id/textViewInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageViewCompanyLogoInfo"
        android:text="@string/enterprise"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textColorHighlight="@color/colorAccent"
        android:textStyle="bold"
        />

    <ImageView
        android:contentDescription="@string/enterprise"
        android:id="@+id/imageViewInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewInfo"
        android:layout_centerHorizontal="true"
        android:src="@drawable/enterprise64"
        android:layout_margin="20dp"
        />

    <LinearLayout
        android:id="@+id/linearLayoutLabels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageViewInfo"
        android:orientation="vertical"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="15dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="15dp">

        <TextView
            android:id="@+id/textViewNameInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/enterprise_name"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"/>

        <TextView
            android:id="@+id/textViewFullNameInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/enterprise_full_name"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"/>

        <TextView
            android:id="@+id/textViewSocialInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/enterprise_social_security"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/wire_number"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/address"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_toEndOf="@id/linearLayoutLabels"
        android:layout_toRightOf="@id/linearLayoutLabels"
        android:layout_alignTop="@id/linearLayoutLabels">
        <TextView
            android:id="@+id/textViewName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/person_name"
            android:layout_marginBottom="13sp"
            />

        <TextView
            android:id="@+id/textViewFullName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enterprise_full_name"
            android:layout_marginBottom="13sp"
            />

        <TextView
            android:id="@+id/textViewSocialNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/social_security"
            android:layout_marginBottom="13sp"
            />

        <TextView
            android:id="@+id/textViewWireNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wire_number"
            android:layout_marginBottom="13sp"
            />

        <TextView
            android:id="@+id/textViewStreetNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/street_number_text"
            />

        <TextView
            android:id="@+id/textViewCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/county_city_text"
            />
    </LinearLayout>

</RelativeLayout>