<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.v7.widget.CardView android:id="@+id/cardViewBillInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_margin="5dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/billing_period"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"/>
            <TextView android:id="@+id/textViewBillBillingPeriod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="   januar"
                android:paddingBottom="3dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_of_days"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"/>
            <TextView android:id="@+id/textViewBillDayNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="   31"
                android:paddingBottom="3dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/publishing_date"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"/>
            <TextView android:id="@+id/textViewBillPublishingDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="   31.01.2017."
                android:paddingBottom="3dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/publishing_place"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"/>
            <TextView android:id="@+id/textViewBillPublishingPlace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="   Beograd"
                android:paddingBottom="3dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/traffic_excise_date"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"/>
            <TextView android:id="@+id/textViewBillTrafficExciseDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="   28.02.2017."
                android:paddingBottom="3dp"/>


        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_toRightOf="@id/cardViewBillInfo"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp">
        <com.jjoe64.graphview.helper.GraphViewXML android:id="@+id/barGraphViewTariff"
            android:layout_width="160dip"
            android:layout_height="180dip"
            app:seriesData="0=5;2=5;3=0;4=2"
            android:title="@string/power_consumption"
            app:seriesType="bar"/>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cardViewBillInfo"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView android:id="@+id/textViewPowerTariffHeading"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/meter_state"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@color/colorAccent"/>

            <TableLayout android:layout_below="@id/textViewPowerTariffHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp">
                <TableRow android:padding="5dp">
                    <TextView
                        android:paddingRight="15dp"
                        android:text="@string/billing_period_new_line"
                        android:textStyle="bold"
                        android:gravity="center"/>
                    <TextView
                        android:paddingRight="15dp"
                        android:text="@string/low_tariff"
                        android:textStyle="bold"
                        android:gravity="center"/>
                    <TextView
                        android:text="@string/high_tariff"
                        android:textStyle="bold"
                        android:gravity="center"/>
                </TableRow>

                <TableRow android:padding="5dp">
                    <TextView
                        android:text="@string/previous"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:paddingRight="15dp"/>

                    <TextView android:id="@+id/textViewLowPrevTariff"
                        android:text="17200"
                              android:textColor="@color/colorPrimary"
                        android:gravity="center"
                        android:paddingRight="15dp"/>

                    <TextView android:id="@+id/textViewHighPrevTariff"
                              android:text="17200"
                              android:textColor="@color/colorPrimary"
                              android:gravity="center"/>

                </TableRow>

                <TableRow android:padding="5dp">
                    <TextView
                        android:text="@string/new_period"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:paddingRight="15dp"/>

                    <TextView android:id="@+id/textViewLowNewTariff"
                              android:text="17900"
                              android:textColor="@color/colorAccent"
                              android:gravity="center"
                              android:paddingRight="15dp"/>

                    <TextView android:id="@+id/textViewHighNewTariff"
                              android:text="17200"
                              android:textColor="@color/colorAccent"
                              android:gravity="center"/>

                </TableRow>

                <TableRow android:padding="5dp">
                    <TextView
                        android:text="@string/consumption"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:paddingRight="15dp"/>

                    <TextView android:id="@+id/textViewLowTariffConsumption"
                              android:text="700"
                              android:textColor="@color/black"
                              android:textStyle="bold"
                              android:gravity="center"
                              android:paddingRight="15dp"/>

                    <TextView android:id="@+id/textViewHighTariffConsumption"
                              android:text="17200"
                              android:textColor="@color/black"
                              android:textStyle="bold"
                              android:gravity="center"/>

                </TableRow>

            </TableLayout>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>