<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <ImageView
        android:id="@+id/imageViewCompanyLogoEnterpriseInfo"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:src="@drawable/logo"/>

    <TextView
        android:id="@+id/textViewEnterpriseInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageViewCompanyLogoEnterpriseInfo"
        android:text="@string/enterprise"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textColorHighlight="@color/colorAccent"
        android:textStyle="bold"
        />

    <ImageView
        android:id="@+id/imageViewEnterprise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewEnterpriseInfo"
        android:layout_centerHorizontal="true"
        android:src="@drawable/enterprise64"
        android:layout_margin="20dp"
        />

    <LinearLayout
        android:id="@+id/linearLayoutEnterpriseLabels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageViewEnterprise"
        android:orientation="vertical"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="15dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/enterprise_name"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/enterprise_full_name"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/enterprise_social_security"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/wire_number"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/address"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_toRightOf="@id/linearLayoutEnterpriseLabels"
        android:layout_alignTop="@id/linearLayoutEnterpriseLabels">

        <TextView
            android:id="@+id/textViewEnterpriseName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enterprise_name"
            android:layout_marginBottom="13sp"
            />

        <TextView
            android:id="@+id/textViewEnterpriseFullName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enterprise_full_name"
            android:layout_marginBottom="13sp"
            />

        <TextView
            android:id="@+id/textViewEnterpriseSocialNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enterprise_social_security"
            android:layout_marginBottom="13sp"
            />

        <TextView
            android:id="@+id/textViewEnterpriseWireNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wire_number"
            android:layout_marginBottom="13sp"
            />

        <TextView
            android:id="@+id/textViewEnterpriseStreetNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/street_number"
            />

        <TextView
            android:id="@+id/textViewEnterpriseCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/county_city"
            />

    </LinearLayout>
</RelativeLayout>