<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    style="?android:attr/buttonBarStyle">
    <TextView
        android:id="@+id/textViewAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_insight"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        android:layout_below="@id/imageViewBill"
        android:layout_centerHorizontal="true"
        />

    <LinearLayout
    android:id="@+id/linearLayoutLogin"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/textViewAccount"
    android:padding="10dp"
    android:layout_margin="20dp"
    android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/login"/>
            <EditText android:id="@+id/editTextLogin"
                android:inputType="text"
                android:hint="@string/login"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/password"/>
            <EditText android:id="@+id/editTextPassword"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:layout_width="150dp"
                android:layout_height="wrap_content"

                />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
    android:id="@+id/linearLayoutAction"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/linearLayoutLogin"
    android:layout_centerHorizontal="true">
        <Button android:id = "@+id/buttonLoginAction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:layout_marginEnd="15dp"
                android:text="@string/loginAction"
            style="?android:buttonBarButtonStyle"/>
        <Button android:id = "@+id/buttonRegisterAction"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:text="@string/registerAction"
            style="?android:attr/buttonBarButtonStyle"/>
    </LinearLayout>

</RelativeLayout>