<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="horizontal">
    <TextView
        android:id="@+id/textViewRegistration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account_registration"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        android:layout_below="@id/imageViewBill"
        android:layout_centerHorizontal="true"
        />

    <LinearLayout
        android:id="@+id/linearLayoutRegistration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewRegistration"
        android:padding="10dp"
        android:layout_margin="20dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/ED_number"/>
            <EditText
                android:id="@+id/editTextEDNumber"
                android:inputType="number"
                android:hint="@string/ED_number"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/meter_number"/>
            <EditText
                android:id="@+id/editTextMeterNumber"
                android:inputType="number"
                android:hint="@string/meter_number"
                android:layout_width="150dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>


    <Button android:id = "@+id/buttonSubmitRegistration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearLayoutRegistration"
            android:layout_centerHorizontal="true"
            android:text="@string/registration"/>

</RelativeLayout>